--- a/style/hw1.css
+++ b/style/hw1.css
@@ -65,15 +65,10 @@ header{
 }
 nav {
     background-color: #0a3a7a;
-
+    justify-content: space-between;
     display: flex;
-    z-index: var(--secondary-layer);
     align-items: center;
     padding: 20px;
-    justify-content: space-between;
-    top: 0;
-    left: 0;
-    right: 0;
 }
 .titles-container{
     color: white;
@@ -86,12 +81,22 @@ nav .title-style{
     margin-right: 20px;
     padding-right: 20px;
 }
+#user-info a{
+    white-space: nowrap;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: 2px solid white;
+    border-radius: 5px;
+    padding: 10px;
+}
 #menu-icon{
     display: none;
 }
 #menu-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 50px;
@@ -146,6 +151,7 @@ nav .title-style{
     align-items: center;
     justify-content: center;
 }
+
 #menu-icon div{
     width: 25px;
     height: 3px;
@@ -608,11 +614,10 @@ footer .flex-container .flex-container-items .title-style{
     }
 }
 @media (max-width: 700px) {
-    nav {
+    #menufixed{
         position: fixed;
-        justify-content: space-around;
         width: 100%;
-        z-index: 3;
+        z-index: 100;
     }
     .background-fixed{
         background-size: cover;
